--- a/public/css/style.css
+++ b/public/css/style.css
@@ -856,6 +856,16 @@ button:hover {
     max-width: 100%;
 }
 
+.window {
+    width: 270px;
+    height: 376px;
+    position: absolute;
+    left: 165px;
+    top: 78px;
+    border-radius: 8px;
+}
+
+/*
 .canvas-container {
     width: 270px;
     height: 376px;
@@ -865,7 +875,10 @@ button:hover {
     border-radius: 8px;
 }
 
-.draggable-zone {
+ */
+
+
+.draggable-zone, .canvas-container {
     width: 600px;
     height: 600px;
     left: 30%;
