--- a/public/css/style.css
+++ b/public/css/style.css
@@ -752,6 +752,9 @@ button:hover {
     height: 100vh;
     overflow: auto;
 }
+.espace-travail-single-page-main-container {
+    height: 180%;
+}
 
 .page-perso-espace-travail {
     border: black 1px solid;
@@ -869,7 +872,68 @@ button:hover {
     width: 600px;
     height: 600px;
     left: 30%;
-    top: 30%;
+    top: 200px;
     position: absolute;
+}
+
+.espace-travail-single-page-content-container-2 .draggable-zone {
+    top: calc(400px + 600px);
+}
+
+.espace-travail-single-page-main-container {
+    height: 310vh;
+}
+
+#p13-1-container {
+    width: 239.5px;
+    height: 161px;
+    top: 59px;
+    left: 51px;
+    position: absolute;
+}
+
+#p13-2-container {
+    width: 111px;
+    height: 166px;
+    top: 49px;
+    left: 426px;
+    position: absolute;
+    transform: rotate(184deg);
+}
+
+#p13-3-container {
+    width: 125px;
+    height: 187px;
+    top: 242px;
+    position: absolute;
+    left: 58.5px;
+    transform: rotate(4.5deg);
+}
+
+#p13-4-container {
+    position: absolute;
+    width: 222.7px;
+    height: 148.47px;
+    transform: rotate(-3deg);
+    top: 236.6px;
+    left: 237.86px;
+}
+
+#p13-5-container {
+    position: absolute;
+    width: 214.56px;
+    height: 142.21px;
+    left: 153.21px;
+    top: 417.33px;
+    transform: rotate(-2deg);
+}
+
+#p13-6-container {
+    position: absolute;
+    top: 378.39px;
+    width: 120.75px;
+    height: 178.89px;
+    left: 422.97px;
+    transform: rotate(4deg);
 }
 
