--- a/public/css/style.css
+++ b/public/css/style.css
@@ -881,7 +881,7 @@ button:hover {
 }
 
 .espace-travail-single-page-main-container {
-    height: 310vh;
+    height: 1000px;
 }
 
 #p13-1-container {
@@ -898,7 +898,7 @@ button:hover {
     top: 49px;
     left: 426px;
     position: absolute;
-    transform: rotate(184deg);
+    transform: rotate(4deg);
 }
 
 #p13-3-container {
