--- a/public/css/style.css
+++ b/public/css/style.css
@@ -861,7 +861,7 @@ button:hover {
 
 .canvas-container {
     width: 270px;
-    height: 376px;
+    height: 378px;
     position: absolute;
     left: 165px;
     top: 78px;
@@ -936,4 +936,22 @@ button:hover {
     left: 422.97px;
     transform: rotate(4deg);
 }
+
+#controls {
+    position: sticky;
+    top: calc(100vh /2);
+    background-color: #B3D6D6;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    width: 40px;
+    align-items: center;
+    border-radius: 20px ;
+    left: 5vw;
+}
+
+.cropper-wrap-box {
+    border-radius: 2%;
+}
+
 
