--- a/public/css/style.css
+++ b/public/css/style.css
@@ -938,20 +938,18 @@ button:hover {
 }
 
 #controls {
-    position: sticky;
-    top: calc(100vh /2);
+    position: absolute;
+    top: 150px;
     background-color: #B3D6D6;
     display: flex;
-    flex-direction: column;
     height: fit-content;
-    width: 40px;
+    width: fit-content;
     align-items: center;
     border-radius: 20px ;
-    left: 5vw;
+    left: 30%;
 }
 
 .cropper-wrap-box {
     border-radius: 2%;
 }
-
 
